Added a dog photo and more things

--- a/test.html
+++ b/test.html
@@ -1,3 +1,13 @@
-<h1> Hola! soy un gran encabezado </h1>
-<p> Hola! soy un párrafo </p>
-<a href="https://google.com" target="_blank" title="Vamos a google">Dame click! Soy un link!</a>
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Pagina de Prueba</title>
+    </head>
+    <body>
+        <h1> Hola! soy un gran encabezado </h1>
+        <p> Hola! soy un <b>párrafo</b> </p>
+        <a href="https://google.com" target="_blank" title="Vamos a google">Dame click! Soy un link!</a>
+        <p>Mi hombre es:<br> guau</p>
+        <img src="img/perro.png" title="guau">
+    </body>
+</html>
