Changed guau names

--- a/test.html
+++ b/test.html
@@ -8,6 +8,6 @@
         <p> Hola! soy un <b>párrafo</b> </p>
         <a href="https://google.com" target="_blank" title="Vamos a google">Dame click! Soy un link!</a>
         <p>Mi hombre es:<br> guau</p>
-        <img src="img/perro.png" title="guau">
+        <img src="img/perro.png" title="paula">
     </body>
 </html>
