Wrote a bunch of code

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
     <head>
         <title>Spider-man</title>
+        <link rel="icon" href="img/spidey_avatar.jpg">
     </head>
 
     <body>
@@ -17,7 +18,34 @@
             <h2>About Spidey</h2>
             <p>Spider-man is a Marvel Comics hero with spider powers such climbing walls, shooting spiderwebs and spider sense!</p>
             <img src="img/spidey_big.jpg">
+            <p>Andrew garfield's spidey in cinema</p>
+
+            <!-- Spidey's facts -->
+            <h2>Spidey's facts</h2>
+            <ol>
+                <li>He is super strong</li>
+                <li>He was bitten by a radioactive spider</li>
+                <li>His secret identity is Peter Parker</li>
+            </ol>
+
+            <!-- spidey's friends -->
+            <h2>Spidey's friends</h2>
+            <p>Spidey has many friends and allies that help him. For example, the Avengers or the Fantastic 4. 
+            Click the next links to know more about them:</p>
+            <ul>
+                <li><a target="_blank" href="https://marvel.fandom.com/es/wiki/Jonathan_Storm_(Tierra-616)">Johnny Storm</a></li>
+                <li><a target="_blank" href="https://spider-man.fandom.com/es/wiki/Miles_Morales_(Tierra-1610)">Miles Morales</a></li>
+                <li><a target="_blank" href="https://marvel.fandom.com/es/wiki/Wade_Wilson_(Tierra-616)">Deadpool</a></li>
+                <li><a target="_blank" href="https://marvel.fandom.com/wiki/Thor_Odinson_(Earth-616)">Thor</a></li>
+            </ul>
         </main>
+
+        <!-- Elemento del footer -->
+        ><footer>
+            <p>This webpage was created following a
+            <a target="_blank" href="https://www.skillshare.com/classes/Hand-Code-Your-First-Website-HTML-CSS-Basics/1575146775">skillshare course</a> 
+            by Rich Armstrong. &copy; Alex</p>
+        </footer>
     </body>
 
 </html>
