Wrote the CSS for spideys website

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <head>
         <title>Spider-man</title>
         <link rel="icon" href="img/spidey_avatar.jpg">
+        <link href="https://fonts.googleapis.com/css2?family=Bangers&display=swap" rel="stylesheet">
+        <link rel="stylesheet" type="text/css" href="css/hero.css">
     </head>
 
     <body>
@@ -18,7 +20,7 @@
             <h2>About Spidey</h2>
             <p>Spider-man is a Marvel Comics hero with spider powers such climbing walls, shooting spiderwebs and spider sense!</p>
             <img src="img/spidey_big.jpg">
-            <p>Andrew garfield's spidey in cinema</p>
+            <p class="caption">Andrew garfield's spidey in cinema</p>
 
             <!-- Spidey's facts -->
             <h2>Spidey's facts</h2>
@@ -41,7 +43,7 @@
         </main>
 
         <!-- Elemento del footer -->
-        ><footer>
+        <footer>
             <p>This webpage was created following a
             <a target="_blank" href="https://www.skillshare.com/classes/Hand-Code-Your-First-Website-HTML-CSS-Basics/1575146775">skillshare course</a> 
             by Rich Armstrong. &copy; Alex</p>
