Added 3 new images to the header

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
         <!-- Elementos del header -->
         <header>
             <img src="img/spidey_avatar.jpg">
+            <img src="img/spidey_avatar_right.jpeg">
+            <img src="img/spidey_avatar_left.png">
+            
             <h1>Spider-man</h1>
         </header>
 
