--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <img src="img/spidey_avatar_right.jpeg">
             <img src="img/spidey_avatar_left.png">
             
-            <h1>Spider-man</h1>
+            <h1>Spider-Man</h1>
         </header>
 
         <!-- Elemento principal -->
